--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
+        "laravelcollective/html": "^6.3",
         "spatie/laravel-activitylog": "^4.6",
         "spatie/laravel-permission": "^5.5"
     },
